-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.14.0
-
None
-
3
-
9223372036854775807
We are seeing the message
(qmt_entry.c:805:qmt_adjust_edquot_qunit_notify()) lustre-QMT0000: can't notify - lge_glbl_data is not set
in the MDS console log for many test suites starting on 19 AUG 2020. This message was introduced by "LU-11023 quota: quota pools for OSTs" with patch commit 09f9fb3211cd .
Some tests like sanity-pcc test 5 at https://testing.whamcloud.com/test_sets/b8d571f0-46fe-4651-a545-24c8142eebf8 fail or hang after this comment is printed, but it’s not clear if the statement is actually warning of a real problem or if the tests are failing/hanging for a different reason.
For the test session https://testing.whamcloud.com/test_sessions/42070a37-3493-47fe-a89f-5b0d4c869bb8, we see messages like the following seven times in the MDS console log:
[31796.726146] Lustre: DEBUG MARKER: /usr/sbin/lctl mark SKIP: sanity-sec test_33 need shared key feature for this test [31796.769617] Lustre: format at qmt_entry.c:805:qmt_adjust_edquot_qunit_notify doesn't end in newline [31796.769631] Lustre: format at qmt_entry.c:805:qmt_adjust_edquot_qunit_notify doesn't end in newline [31796.769634] Lustre: 4891:0:(qmt_entry.c:805:qmt_adjust_edquot_qunit_notify()) lustre-QMT0000: can't notify - lge_glbl_data is not set[31796.773585] Lustre: format at qmt_entry.c:805:qmt_adjust_edquot_qunit_notify doesn't end in newline [31796.773626] Lustre: format at qmt_entry.c:805:qmt_adjust_edquot_qunit_notify doesn't end in newline
We need to determine if this message is a sign of a real problem of if it should be suppressed.